mainly done having an issue with the main content

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 	<title>London Love</title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
-	<h1>Coding Projects</h1>
+	<h1>Contact</h1>
 	<header>
 		<nav>
 			<ul>
@@ -15,12 +15,7 @@
 				<a href="./contact.html"><li>Contact</li>
 			</ul>
 		</nav>
-		<article>
-			<h4>Furture Project 1</h4>
-		</article>
-		<article>
-			<h4>Furture Project 2</h4>
-		</article>
-	</header></body>
+	</header>
+	</body>
 	<footer>&copy Krissy Caron 2017 krissycaron@gmail.com 207-251-1570</footer>
 </html>
