--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<meta charset="utf-8">
 	<title>London Love</title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Muli" rel="stylesheet">
 </head>
-	<h1>Krissy Caron's Portfolio Page</h1>
 	<header>
 		<nav>	
 			<ul>
 				<a href="./index.html"><li>Home</li>
-				<a href="#aboutme"><li>About Me</li>
+				<a href="./about.html"><li>About Me</li>
 				<a href="./projects.html"><li>Projects</li>
-				<a href="#contact"><li>Contact Page</li>
+				<a href="./contact.html"><li>Contact</li>
 			</ul>
 		</nav>
-		
+		<h1>Krissy Caron's Portfolio Page</h1>
 	</header>
 <body>
 	<div class="bio">
