--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<title>London Love</title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
-	<h1>Coding Projects</h1>
+	<h1>About</h1>
 	<header>
 		<nav>
 			<ul>
@@ -14,13 +14,7 @@
 				<a href="./projects.html"><li>Projects</li>
 				<a href="./contact.html"><li>Contact</li>
 			</ul>
-		</nav>
-		<article>
-			<h4>Furture Project 1</h4>
-		</article>
-		<article>
-			<h4>Furture Project 2</h4>
-		</article>
-	</header></body>
+	</header>
+	</body>
 	<footer>&copy Krissy Caron 2017 krissycaron@gmail.com 207-251-1570</footer>
 </html>
