Finished enough for you guys to rip it apart and make me cry

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<header>
 		<nav>	
 			<ul>
-				<a href="./index.html"><li>Home</li>
-				<a href="./about.html"><li>About Me</li>
-				<a href="./projects.html"><li>Projects</li>
-				<a href="./contact.html"><li>Contact</li>
+				<a href="./index.html"><li>Home</li></a>
+				<a href="./about.html"><li>About Me</li></a>
+				<a href="./projects.html"><li>Projects</li></a>
+				<a href="./contact.html"><li>Contact</li></a>
 			</ul>
 		</nav>
 		<h1>Krissy Caron's Portfolio Page</h1>
