callans suggested changes for review

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 </head>
 	<h1>Coding Projects</h1>
 	<header>
-		<nav>
+		<nav> <!-- Article element with two sections for future projects (placeholders) -->
 			<ul>
 				<a href="./index.html"><li>Home</li>
 				<a href="./about.html"><li>About Me</li>
